[gd_scene load_steps=27 format=3 uid="uid://cvnxcs78uh1g3"]

[ext_resource type="Texture2D" uid="uid://cx4j8wcfgtadt" path="res://level/plataforms/Block_Blue.png" id="1_h7so5"]
[ext_resource type="Script" path="res://level/plataforms/electrical_block/electrical_block.gd" id="1_nvm74"]
[ext_resource type="Texture2D" uid="uid://co3lhtxcs82lr" path="res://level/plataforms/electrical_block/Shock-Sprite.png" id="3_egova"]

[sub_resource type="AtlasTexture" id="AtlasTexture_enhap"]
atlas = ExtResource("3_egova")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu0cf"]
atlas = ExtResource("3_egova")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3pev"]
atlas = ExtResource("3_egova")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uwmm"]
atlas = ExtResource("3_egova")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w8xl"]
atlas = ExtResource("3_egova")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfqoo"]
atlas = ExtResource("3_egova")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_piimy"]
atlas = ExtResource("3_egova")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcvlj"]
atlas = ExtResource("3_egova")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqx7n"]
atlas = ExtResource("3_egova")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea2bu"]
atlas = ExtResource("3_egova")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io8nu"]
atlas = ExtResource("3_egova")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kno8x"]
atlas = ExtResource("3_egova")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24vov"]
atlas = ExtResource("3_egova")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuu0k"]
atlas = ExtResource("3_egova")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptev0"]
atlas = ExtResource("3_egova")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhxd3"]
atlas = ExtResource("3_egova")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c16lt"]
atlas = ExtResource("3_egova")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67m0q"]
atlas = ExtResource("3_egova")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2kfan"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_enhap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu0cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3pev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uwmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w8xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfqoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piimy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcvlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqx7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea2bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io8nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kno8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24vov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuu0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptev0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhxd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c16lt")
}],
"loop": true,
"name": &"activate",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"defalt",
"speed": 5.0
}, {
"frames": [{
"duration": 7.0,
"texture": SubResource("AtlasTexture_67m0q")
}],
"loop": true,
"name": &"shock",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_dnude"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0)]
}

[sub_resource type="Animation" id="Animation_ltn3a"]
resource_name = "animations"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(2, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(2, 2), Vector2(2, 0), Vector2(2, -2), Vector2(0, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(2, 2), Vector2(2, 0), Vector2(2, -2), Vector2(0, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(2, 2), Vector2(2, 0), Vector2(2, -2), Vector2(0, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(2, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(2, 2), Vector2(2, 0), Vector2(2, -2), Vector2(0, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(2, 2), Vector2(2, 0), Vector2(2, -2), Vector2(0, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(2, 2), Vector2(2, 0), Vector2(2, -2), Vector2(0, -2), Vector2(-2, -2), Vector2(-2, 0), Vector2(-2, 2), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pjggu"]
_data = {
"RESET": SubResource("Animation_dnude"),
"activate": SubResource("Animation_ltn3a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80kgv"]
size = Vector2(32, 32)

[node name="AnimatableBody2D" type="AnimatableBody2D"]
script = ExtResource("1_nvm74")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 0)
texture = ExtResource("1_h7so5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2kfan")
animation = &"activate"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pjggu")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_80kgv")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
